[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hrv-analysis"
version = "1.0.5"
authors = [
  { name="Robin Champseix", email="robin.champseix@gmail.com" },
]
description = "a package to calculate features from Rr Interval for HRV analyses"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11, <3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.15.1",
    "astropy>=7.2.0",
    "nolds>=0.6.3",
    "scipy>=1.17.1",
    "pandas>=3.0.2",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "codecov",
]

[project.urls]
"Homepage" = "https://github.com/Aura-healthcare/hrv-analysis"
"Bug Tracker" = "https://github.com/Aura-healthcare/hrv-analysis/issues"

[tool.hatch.build.targets.wheel]
packages = ["hrvanalysis"]
